creusot/tests/should_fail/terminates/mutual_recursion_trait.stderr
error: Mutually recursive functions: when calling `bar`...
  --> mutual_recursion_trait.rs:18:1
   |
18 | fn bar() {
   | ^^^^^^^^
   |
note: then `bar` calls `<i32 as Foo>::foo`...
  --> mutual_recursion_trait.rs:19:5
   |
19 |     <i32 as Foo>::foo();
   |     ^^^^^^^^^^^^^^^^^^^
note: finally `<i32 as Foo>::foo` calls `bar`.
  --> mutual_recursion_trait.rs:13:9
   |
13 |         bar();
   |         ^^^^^

error: aborting due to 1 previous error

